--- a/css/text-style.css
+++ b/css/text-style.css
@@ -30,6 +30,12 @@ h3 {
     color: #4a4d4f;
 }
 
+h4 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #4a4d4f;
+}
+
 p {
     font-size: 1.5rem;
     font-weight: normal;
